name:                 http-client-lens
version:              0.1.0.0
author:               Nick Spinale
maintainer:           Nick Spinale <nick@nickspinale.com>
license:              MIT
license-file:         LICENSE
build-type:           Simple
cabal-version:        >=1.10

library
  default-language:   Haskell2010
  hs-source-dirs:     src

  exposed-modules:    Network.HTTP.Client.Lens

  build-depends:      base >=4.8 && <5
                    , http-client
                    , lens
